# nezukari

./: .env.example  .flake8  .gitignore  README.md  application.yml  pyproject.toml  requirements.txt
.github/workflows/: Lint Files.yml
nezukari/: __init__.py  __main__.py
nezukari/components/: filters.py  join.py  leave.py  lyrics.py  nowplaying.py  pause.py  play.py  queue.py  resume.py  skip.py  volume.py
nezukari/core/: __init__.py  bot.py  client.py  config.py  events.py
nezukari/utils/: __init__.py  equalizers.py
